Added more Gemini API features

--- a/main/templates/main/landing.html
+++ b/main/templates/main/landing.html
@@ -5,5 +5,8 @@
 </head>
 <body>
     <h1>{{ product }}</h1>
+    <h2>{{ tagline }}</h2>
+    <p>{{ description }}</p>
+    <img src ="{{ img }}" alt="Product Image">
 </body>
 </html>
