--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <h1>Welcome to LaunchDeck</h1>
+    <h1>Welcome to Venture</h1>
     <form method="POST">
         {% csrf_token %}
         {{ form }}
