--- a/main/templates/main/organic_landing.html
+++ b/main/templates/main/organic_landing.html
@@ -186,11 +186,11 @@
     <section>
       <h2>Post on Social Media</h2>
       <div class="carousel-container">
-        <div class="carousel-item"></div>
-        <div class="carousel-item"></div>
-        <div class="carousel-item"></div>
-        <div class="carousel-item"></div>
-        <div class="carousel-item"></div>
+        <div class="carousel-item">I love {{product}}</div>
+        <div class="carousel-item">{{product}} saved my marriage</div>
+        <div class="carousel-item">without {{product}} I would be homeless</div>
+        <div class="carousel-item">{{description}} is innacurate</div>
+        <div class="carousel-item">{{tagline}}!!!!</div>
       </div>
       <div class="social-icons">
         <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
