--- a/main/templates/main/organic_landing.html
+++ b/main/templates/main/organic_landing.html
@@ -189,7 +189,7 @@
         <div class="carousel-item">I love {{product}}</div>
         <div class="carousel-item">{{product}} saved my marriage</div>
         <div class="carousel-item">without {{product}} I would be homeless</div>
-        <div class="carousel-item">{{description}} is innacurate</div>
+        <div class="carousel-item">is innacurate</div>
         <div class="carousel-item">{{tagline}}!!!!</div>
       </div>
       <div class="social-icons">
